Create OpenAiClient (doesn't parse responses yet)